added web translate

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
               <div class="rect5"></div>
             </div>
           </div>
-          <div class="error text-muted">Codelf found nothing, try "Suggestions" :)</div>
+          <div class="error text-danger">Codelf found nothing, try "Suggestions" :)</div>
         </header>
         <section class="bd">
           <blockquote class="blockquote">
