added logo file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="description" content="Search over projects from Github, Bitbucket, Google Code and more to find real-world usage variable names" />
   <meta name="keywords" content="variable naming,programming naming,programming variable dictionary,naming convention,变量命名,函数命名,方法命名,变量命名神器">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="shortcut icon" href="resources/images/codelf_logo.png" >
+  <link rel="apple-touch-icon" sizes="144x144"  href="resources/images/codelf_logo.png">
+  <link rel="apple-touch-icon-precomposed" href="resources/images/codelf_logo.png">
   <link rel="stylesheet" href="resources/css/bootstrap.min.css">
   <style>
     html,body{
@@ -101,28 +104,34 @@
     .main-title h1.animated span{
       transition: color 250ms linear;
     }
+    /*C*/
     .main-title h1.animated span:nth-child(1){
-      color: #3369e8;
+      color: #d50f25;
       transition-delay: 200ms;
     }
+    /*O*/
     .main-title h1.animated span:nth-child(2){
-      color: #d50f25;
+      color: #3369e8;
       transition-delay: 350ms;
     }
+    /*D*/
     .main-title h1.animated span:nth-child(3){
       color: #eeb211;
       transition-delay: 500ms;
     }
+    /*E*/
     .main-title h1.animated span:nth-child(4){
-      color: #3369e8;
+      color: #d50f25;
       transition-delay: 650ms;
     }
+    /*L*/
     .main-title h1.animated span:nth-child(5){
       color: #009925;
       transition-delay: 800ms;
     }
+    /*F*/
     .main-title h1.animated span:nth-child(6){
-      color: #d50f25;
+      color: #3369e8;
       transition-delay: 950ms;
     }
     .search-form{
