un fixed sourcecode viwer on desktop broswer

--- a/index.html
+++ b/index.html
@@ -196,15 +196,15 @@
       max-height: 98%;
     }
     .sourcecode-modal .modal-dialog,
-    .sourcecode-modal .modal-content,
-    .sourcecode-modal .modal-body{
+    .sourcecode-modal .modal-content{
       height: 100%;
       overflow: hidden;
     }
     .sourcecode-modal .modal-content{
-      padding-bottom: 20px;
+      padding-bottom: 8%;
     }
     .sourcecode-modal .modal-body{
+      max-height: 98%;
       overflow: scroll;
       -webkit-overflow-scrolling: touch;
     }
@@ -241,10 +241,7 @@
         overflow: auto;
       }
       .sourcecode-modal .modal-content{
-        padding-bottom: auto;
-      }
-      .sourcecode-modal .modal-body{
-        overflow: auto;
+        padding-bottom: 0;
       }
     }
   </style>
