--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
   <header class="main-title">
     <header><a href="./"><h1><span>C</span><span>O</span><span>D</span><span>E</span><span>L</span><span>F</span></h1></a></header>
     <h5>Search over projects from Github, Bitbucket, Google Code and more to find </h5>
-    <h5><span class="label label-success">real-world usage</span> <span class="label label-danger">variable names</span></h5>
+    <h5><span class="label label-primary">real-world usage</span> <span class="label label-danger">variable names</span></h5>
   </header>
   <section class="row search-form">
     <div class="col-lg-12">
